--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 27
     buildToolsVersion '28.0.3'
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 28
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
     }
@@ -35,4 +35,5 @@ dependencies {
     api 'com.squareup.retrofit2:converter-scalars:2.5.0'
     api 'com.squareup.okhttp3:logging-interceptor:3.12.0'
     api 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.android.support:support-compat:27.1.1'
 }
