--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,25 @@
 
 buildscript {
     repositories {
-        google()
-        jcenter()
+//        google()
+//        jcenter()
         maven {
             url 'https://maven.fabric.io/public'
         }
-        mavenCentral() // add repository
+        maven {
+            url 'http://maven.aliyun.com/repository/jcenter'
+        }
+        maven {
+            url 'http://maven.aliyun.com/repository/google'
+        }
+        maven {
+            url 'http://maven.aliyun.com/repository/gradle-plugin'
+        }
+        mavenCentral()
+        google() // add repository
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.0'
+        classpath 'com.android.tools.build:gradle:3.5.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,10 +29,19 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
-        jcenter()
+//        google()
+//        jcenter()
         maven {
             url 'https://maven.fabric.io/public'
+        }
+        maven {
+            url 'http://maven.aliyun.com/repository/jcenter'
+        }
+        maven {
+            url 'http://maven.aliyun.com/repository/google'
+        }
+        maven {
+            url 'http://maven.aliyun.com/repository/gradle-plugin'
         }
         maven { url "https://jitpack.io" }
         mavenCentral() // add repository
