--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     api 'com.squareup.okhttp3:logging-interceptor:3.12.0'
     api 'com.google.code.gson:gson:2.8.2'
     implementation 'com.android.support:support-compat:27.1.1'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
 }
