--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     buildToolsVersion '28.0.3'
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1 
         versionName "1.0"
     }
@@ -35,6 +35,6 @@ dependencies {
     api 'com.squareup.retrofit2:converter-scalars:2.5.0'
     api 'com.squareup.okhttp3:logging-interceptor:3.12.0'
     api 'com.google.code.gson:gson:2.8.2'
-    implementation 'com.android.support:support-compat:27.1.1'
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'androidx.core:core:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
 }
